Bug fixes and exception handling

--- a/MabiPale2.Plugins.EntityLogger/MabiPale2.Plugins.EntityLogger.csproj
+++ b/MabiPale2.Plugins.EntityLogger/MabiPale2.Plugins.EntityLogger.csproj
@@ -65,7 +65,6 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="StructUtil.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -81,6 +80,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ParseException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
